--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <headThing>Insert witty title here.</headThing>
-<p>A webpage for learning PHP.</p>
+<p>My webpage for stuff.  It's a work in progress, so don't be an asshole.</p>
 </body>
 </html>
