--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <title>Fish's Webpage</title>
 </head>
 <body>
-<headThing>Insert witty title here.</headThing>
-<p>My webpage for stuff.  It's a work in progress, so don't be an asshole.</p>
+<div id="sidebarContainer">
+  <div class="sidebarA"></div>
+  <div class="sidebarB"></div>
+  </div>
 </body>
 </html>
