--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 <title>Fish's Webpage</title>
 </head>
 <body>
-<div id="sidebarContainer">
+  <div id="sidebarContainer">
   <div class="sidebarA"></div>
   <div class="sidebarB"></div>
   </div>
+  <div class="postTitle">Test Post</div>
+  <div class="postContent">This is a very very basic version of what I plan to do with my website.  I'll probably post practice programs
+  in javascript and such, maybe post some fanfic to fill out the pages.  I just wanna make it look nice-ish.</div>
 </body>
 </html>
