--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <div class="sidebarA"></div>
   <div class="sidebarB"></div>
   </div>
-  <div class="postTitle">Test Post</div>
-  <div class="postContent">This is a very very basic version of what I plan to do with my website.  I'll probably post practice programs
+  <div class="title">Test Post</div>
+  <div class="content">This is a very very basic version of what I plan to do with my website.  I'll probably post practice programs
   in javascript and such, maybe post some fanfic to fill out the pages.  I just wanna make it look nice-ish.</div>
 </body>
 </html>
