color changes, top bar giving me different problems

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <div id="topBar">
-            <a href="fish-with-a-pencil.github.io">HOME</a>    <a href="https://anotherdamneddreamer.wordpress.com/">BLOG</a>
-            <a href="http://a-real-magical-girl.tumblr.com/">TUMBLR</a>
+        <a href="fish-with-a-pencil.github.io">HOME</a> "     "    
+        <a href="https://anotherdamneddreamer.wordpress.com/">BLOG</a> "     "
+        <a href="http://a-real-magical-girl.tumblr.com/">TUMBLR</a> "     "
     </div>
   <div class="sidebarA">
     <div class="headThing">Goofy Bullshit</div>
