whole lot of changes woo

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 </head>
 <body>
     <div id="topBar">
-        <a href="fish-with-a-pencil.github.io">HOME</a> "     "    
-        <a href="https://anotherdamneddreamer.wordpress.com/">BLOG</a> "     "
-        <a href="http://a-real-magical-girl.tumblr.com/">TUMBLR</a> "     "
+        <p style="margin-right: 40px;"><a href="fish-with-a-pencil.github.io">HOME</a>     <a href="https://anotherdamneddreamer.wordpress.com/">BLOG</a>     <a href="http://a-real-magical-girl.tumblr.com/">TUMBLR</a>
+        </p>
     </div>
   <div class="sidebarA">
     <div class="headThing">Goofy Bullshit</div>
