--- a/Dice.html
+++ b/Dice.html
@@ -166,79 +166,102 @@
                 }
             }
             </script>
-            <style>
-                #D4 {
-                    background-color:#EEF6F3;
-                    padding: 15px 32px;
-                    font-size: 20px;
-                    color: #335475;
-                }
+<style>
+    #D4 {
+        background-color:#EEF6F3;
+        padding: 15px 32px;
+        font-size: 20px;
+        color: #335475;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+    }
 
-                #D6 {
-                    background-color:#EEF6F3;
-                    padding: 15px 32px;
-                    font-size: 20px;
-                    color: #335475;
-                }
+    #D6 {
+        background-color:#EEF6F3;
+        padding: 15px 32px;
+        font-size: 20px;
+        color: #335475;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+    }
 
-                #D8 {
-                    background-color:#EEF6F3;
-                    padding: 15px 32px;
-                    font-size: 20px;
-                    color: #335475;
-                }
+    #D8 {
+        background-color:#EEF6F3;
+        padding: 15px 32px;
+        font-size: 20px;
+        color: #335475;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+    }
 
-                #D10 {
-                    background-color:#EEF6F3;
-                    padding: 15px 32px;
-                    font-size: 20px;
-                    color: #335475;
-                }
 
-                #D12 {
-                    background-color:#EEF6F3;
-                    padding: 15px 32px;
-                    font-size: 20px;
-                    color: #335475;
-                }
+    #D10 {
+        background-color:#EEF6F3;
+        padding: 15px 32px;
+        font-size: 20px;
+        color: #335475;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+    }
 
-                #D20 {
-                    background-color:#EEF6F3;
-                    padding: 15px 32px;
-                    font-size: 20px;
-                    color: #335475;
-                }
+    #D12 {
+        background-color:#EEF6F3;
+        padding: 15px 32px;
+        font-size: 20px;
+        color: #335475;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+    }
 
-                #button-container {
-                    margin: auto;
-                    width: 80%;
-                    position: absolute;
-                    bottom: 20px;
-                    border: 1px black;
-                }
+    #D20 {
+        background-color:#EEF6F3;
+        padding: 15px 32px;
+        font-size: 20px;
+        color: #335475;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+    }
 
-                #boxy {
-                    width: 400px;
-                    height: 400px;
-                    border: 1px black;
-                    font-size: 34px;
-                    margin: auto;
-                    text-align: center;
-                }
-                span #roll {
-                    display: inline-block;
-                    vertical-align: middle;
-                }
+    #button-container {
+        margin: auto;
+        position: absolute;
+        bottom: 20px;
+        border: 1px black;
+    }
 
-            </style>
+    .boxy {
+        width: 400px;
+        height: 400px;
+        border: 1px black;
+        font-size: 34px;
+        margin: auto;
+        text-align: center;
+    }
+    span #roll {
+        display: inline-block;
+        vertical-align: middle;
+    }
+
+</style>
     </head>
     <body>
+        <div id="topBar">
+            <p style="margin-right: 40px;">
+                <a href="fish-with-a-pencil.github.io">HOME</a>     <a href="https://anotherdamneddreamer.wordpress.com/">BLOG</a>     <a href="http://a-real-magical-girl.tumblr.com/">TUMBLR</a>
+            </p>
+        </div>
         <div class="headThing">Rigged Dice</div>
         <content> 
             Welcome to <i>Everything is Shit</i>! The tabletop roleplaying game where everything than can go wrong,
             <i>will</i> go wrong™!
         </content>
-        <div id="boxy"> 
+        <div class="boxy"> 
             <span id="roll">0</span>
         </div>
         <div id="button-container">
