formatting dice page

--- a/Dice.html
+++ b/Dice.html
@@ -169,7 +169,7 @@
 <style>
     #D4 {
         background-color:#EEF6F3;
-        padding: 15px 32px;
+        padding: 15px 50px;
         font-size: 20px;
         color: #335475;
         -webkit-box-shadow: none;
@@ -179,7 +179,7 @@
 
     #D6 {
         background-color:#EEF6F3;
-        padding: 15px 32px;
+        padding: 15px 50px;
         font-size: 20px;
         color: #335475;
         -webkit-box-shadow: none;
@@ -189,7 +189,7 @@
 
     #D8 {
         background-color:#EEF6F3;
-        padding: 15px 32px;
+        padding: 15px 50px;
         font-size: 20px;
         color: #335475;
         -webkit-box-shadow: none;
@@ -200,7 +200,7 @@
 
     #D10 {
         background-color:#EEF6F3;
-        padding: 15px 32px;
+        padding: 15px 50px;
         font-size: 20px;
         color: #335475;
         -webkit-box-shadow: none;
@@ -210,7 +210,7 @@
 
     #D12 {
         background-color:#EEF6F3;
-        padding: 15px 32px;
+        padding: 15px 50px;
         font-size: 20px;
         color: #335475;
         -webkit-box-shadow: none;
@@ -220,7 +220,7 @@
 
     #D20 {
         background-color:#EEF6F3;
-        padding: 15px 32px;
+        padding: 15px 50px;
         font-size: 20px;
         color: #335475;
         -webkit-box-shadow: none;
@@ -229,7 +229,7 @@
     }
 
     #button-container {
-        margin: auto;
+        width: 100%
         position: absolute;
         bottom: 20px;
         border: 1px black;
@@ -246,6 +246,10 @@
     span #roll {
         display: inline-block;
         vertical-align: middle;
+    }
+    .inny {
+        margin: 0 auto;
+
     }
 
 </style>
