formatting dice page...again

--- a/Dice.html
+++ b/Dice.html
@@ -169,7 +169,7 @@
 <style>
     #D4 {
         background-color:#EEF6F3;
-        padding: 15px 50px;
+        padding: 15px;
         font-size: 20px;
         color: #335475;
         -webkit-box-shadow: none;
@@ -179,7 +179,7 @@
 
     #D6 {
         background-color:#EEF6F3;
-        padding: 15px 50px;
+        padding: 15px;
         font-size: 20px;
         color: #335475;
         -webkit-box-shadow: none;
@@ -189,7 +189,7 @@
 
     #D8 {
         background-color:#EEF6F3;
-        padding: 15px 50px;
+        padding: 15px;
         font-size: 20px;
         color: #335475;
         -webkit-box-shadow: none;
@@ -200,7 +200,7 @@
 
     #D10 {
         background-color:#EEF6F3;
-        padding: 15px 50px;
+        padding: 15px;
         font-size: 20px;
         color: #335475;
         -webkit-box-shadow: none;
@@ -210,7 +210,7 @@
 
     #D12 {
         background-color:#EEF6F3;
-        padding: 15px 50px;
+        padding: 15px;
         font-size: 20px;
         color: #335475;
         -webkit-box-shadow: none;
@@ -220,7 +220,7 @@
 
     #D20 {
         background-color:#EEF6F3;
-        padding: 15px 50px;
+        padding: 15px;
         font-size: 20px;
         color: #335475;
         -webkit-box-shadow: none;
@@ -231,7 +231,7 @@
     #button-container {
         width: 100%
         position: absolute;
-        bottom: 20px;
+        bottom: 0 px;
         border: 1px black;
     }
 
