listen... I just wanna see my pages bruh

--- a/Dice.html
+++ b/Dice.html
@@ -172,9 +172,7 @@
         padding: 15px;
         font-size: 20px;
         color: #335475;
-        -webkit-box-shadow: none;
-        -moz-box-shadow: none;
-        box-shadow: none;
+        border:none;
     }
 
     #D6 {
@@ -182,9 +180,7 @@
         padding: 15px;
         font-size: 20px;
         color: #335475;
-        -webkit-box-shadow: none;
-        -moz-box-shadow: none;
-        box-shadow: none;
+        border:none;
     }
 
     #D8 {
@@ -192,9 +188,7 @@
         padding: 15px;
         font-size: 20px;
         color: #335475;
-        -webkit-box-shadow: none;
-        -moz-box-shadow: none;
-        box-shadow: none;
+        border:none;
     }
 
 
@@ -203,9 +197,7 @@
         padding: 15px;
         font-size: 20px;
         color: #335475;
-        -webkit-box-shadow: none;
-        -moz-box-shadow: none;
-        box-shadow: none;
+        border:none;
     }
 
     #D12 {
@@ -213,9 +205,7 @@
         padding: 15px;
         font-size: 20px;
         color: #335475;
-        -webkit-box-shadow: none;
-        -moz-box-shadow: none;
-        box-shadow: none;
+        -border:none;
     }
 
     #D20 {
@@ -223,9 +213,7 @@
         padding: 15px;
         font-size: 20px;
         color: #335475;
-        -webkit-box-shadow: none;
-        -moz-box-shadow: none;
-        box-shadow: none;
+        border:none;
     }
 
     #button-container {
