button color change

--- a/Dice.html
+++ b/Dice.html
@@ -166,53 +166,58 @@
                 }
             }
             </script>
-<style>
+<style type="text/css">
     #D4 {
-        background-color:#EEF6F3;
+        background-color:#5b5b5b;
         padding: 15px;
         font-size: 20px;
-        color: #335475;
-        border:none;
+        color: #d8d8d8;
+        border: none;
+        margin-right: 15px;
     }
 
     #D6 {
-        background-color:#EEF6F3;
+        background-color:#5b5b5b;
         padding: 15px;
         font-size: 20px;
-        color: #335475;
-        border:none;
+        color: #d8d8d8;
+        border: none;
+        margin-right: 15px;
     }
 
     #D8 {
-        background-color:#EEF6F3;
+        background-color:#5b5b5b;
         padding: 15px;
         font-size: 20px;
-        color: #335475;
+        color: #d8d8d8;
         border:none;
+        margin-right: 15px;
     }
 
 
     #D10 {
-        background-color:#EEF6F3;
+        background-color:#5b5b5b;
         padding: 15px;
         font-size: 20px;
-        color: #335475;
+        color: #d8d8d8;
         border:none;
+        margin-right: 15px;
     }
 
     #D12 {
-        background-color:#EEF6F3;
+        background-color:#5b5b5b;
         padding: 15px;
         font-size: 20px;
-        color: #335475;
-        -border:none;
+        color: #d8d8d8;
+        border:none;
+        margin-right: 15px;
     }
 
     #D20 {
-        background-color:#EEF6F3;
+        background-color:#5b5b5b;
         padding: 15px;
         font-size: 20px;
-        color: #335475;
+        color: #d8d8d8;
         border:none;
     }
 
