--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <div id="topBar">
-        <p style="margin-right: 40px;"><a href="fish-with-a-pencil.github.io">HOME</a>     <a href="https://anotherdamneddreamer.wordpress.com/">BLOG</a>     <a href="http://a-real-magical-girl.tumblr.com/">TUMBLR</a>
+        <p style="margin-right: 40px;"><a href="fish-with-a-pencil.github.io">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;     
+        <a href="https://anotherdamneddreamer.wordpress.com/">BLOG</a>&nbsp;&nbsp;&nbsp;&nbsp;   
+        <a href="http://a-real-magical-girl.tumblr.com/">TUMBLR</a>&nbsp;&nbsp;&nbsp;&nbsp;
         </p>
     </div>
   <div class="sidebarA">
