--- a/Dice.html
+++ b/Dice.html
@@ -246,14 +246,14 @@
                 <a href="fish-with-a-pencil.github.io">HOME</a>     <a href="https://anotherdamneddreamer.wordpress.com/">BLOG</a>     <a href="http://a-real-magical-girl.tumblr.com/">TUMBLR</a>
             </p>
         </div>
-        <div style="top:100px; width:100%;">
+        <div style="bottom:100px; width:100%;">
             <div class="headThing">Rigged Dice</div>
             <content>
                 Welcome to
                 <i>Everything is Shit</i>! The tabletop roleplaying game where everything than can go wrong,
                 <i>will</i> go wrong™!
             </content>
-            <div id="boxy">
+            <div class="box">
                 <span id="roll">0</span>
             </div>
                 <button id="D4" onclick="rigged4()">Four-Sided</button>
