fixing dice some more

--- a/Dice.html
+++ b/Dice.html
@@ -1,7 +1,85 @@
 <!doctype html>
 <html>
     <head>
-            <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <style type="text/css">
+            #D4 {
+                background-color:#5b5b5b;
+                padding: 15px;
+                font-size: 20px;
+                color: #d8d8d8;
+                border: none;
+                margin-right: 15px;
+            }
+
+            #D6 {
+                background-color:#5b5b5b;
+                padding: 15px;
+                font-size: 20px;
+                color: #d8d8d8;
+                border: none;
+                margin-right: 15px;
+            }
+
+            #D8 {
+                background-color:#5b5b5b;
+                padding: 15px;
+                font-size: 20px;
+                color: #d8d8d8;
+                border:none;
+                margin-right: 15px;
+            }
+
+
+            #D10 {
+                background-color:#5b5b5b;
+                padding: 15px;
+                font-size: 20px;
+                color: #d8d8d8;
+                border:none;
+                margin-right: 15px;
+            }
+
+            #D12 {
+                background-color:#5b5b5b;
+                padding: 15px;
+                font-size: 20px;
+                color: #d8d8d8;
+                border:none;
+                margin-right: 15px;
+            }
+
+            #D20 {
+                background-color:#5b5b5b;
+                padding: 15px;
+                font-size: 20px;
+                color: #d8d8d8;
+                border:none;
+            }
+
+            .boxy {
+                width: 400px;
+                height: 400px;
+                border: 1px black;
+                font-size: 34px;
+                margin: auto;
+                text-align: center;
+                display-block;
+            }
+            #roll {
+                vertical-align: middle;
+            }
+            .inny {
+                margin: 0 auto;
+
+            }
+
+            #contain {
+                display: block;
+                width: 100%;
+            }
+
+        </style>
             <script>
             function rigged4() {
                 var rolll;
@@ -166,79 +244,7 @@
                 }
             }
             </script>
-<style type="text/css">
-    #D4 {
-        background-color:#5b5b5b;
-        padding: 15px;
-        font-size: 20px;
-        color: #d8d8d8;
-        border: none;
-        margin-right: 15px;
-    }
 
-    #D6 {
-        background-color:#5b5b5b;
-        padding: 15px;
-        font-size: 20px;
-        color: #d8d8d8;
-        border: none;
-        margin-right: 15px;
-    }
-
-    #D8 {
-        background-color:#5b5b5b;
-        padding: 15px;
-        font-size: 20px;
-        color: #d8d8d8;
-        border:none;
-        margin-right: 15px;
-    }
-
-
-    #D10 {
-        background-color:#5b5b5b;
-        padding: 15px;
-        font-size: 20px;
-        color: #d8d8d8;
-        border:none;
-        margin-right: 15px;
-    }
-
-    #D12 {
-        background-color:#5b5b5b;
-        padding: 15px;
-        font-size: 20px;
-        color: #d8d8d8;
-        border:none;
-        margin-right: 15px;
-    }
-
-    #D20 {
-        background-color:#5b5b5b;
-        padding: 15px;
-        font-size: 20px;
-        color: #d8d8d8;
-        border:none;
-    }
-
-    .boxy {
-        width: 400px;
-        height: 400px;
-        border: 1px black;
-        font-size: 34px;
-        margin: auto;
-        text-align: center;
-    }
-    span #roll {
-        display: inline-block;
-        vertical-align: middle;
-    }
-    .inny {
-        margin: 0 auto;
-
-    }
-
-</style>
     </head>
     <body>
         <div id="topBar">
@@ -246,7 +252,7 @@
                 <a href="fish-with-a-pencil.github.io">HOME</a>     <a href="https://anotherdamneddreamer.wordpress.com/">BLOG</a>     <a href="http://a-real-magical-girl.tumblr.com/">TUMBLR</a>
             </p>
         </div>
-        <div style="bottom:100px; width:100%;">
+        <div id="contain">
             <div class="headThing">Rigged Dice</div>
             <content>
                 Welcome to
