fuuuck nothing is working kill me

--- a/Dice.html
+++ b/Dice.html
@@ -259,7 +259,7 @@
                 <i>Everything is Shit</i>! The tabletop roleplaying game where everything than can go wrong,
                 <i>will</i> go wrong™!
             </content>
-            <div class="box">
+            <div class="boxy">
                 <span id="roll">0</span>
             </div>
                 <button id="D4" onclick="rigged4()">Four-Sided</button>
