--- a/Dice.html
+++ b/Dice.html
@@ -77,6 +77,7 @@
             #contain {
                 display: block;
                 width: 100%;
+                top: 80px;
             }
 
         </style>
