--- a/Dice.html
+++ b/Dice.html
@@ -248,7 +248,13 @@
 
     </head>
     <body>
-        
+        <div id="topBar">
+            <p style="margin-right: 40px;">
+                <a href="fish-with-a-pencil.github.io">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="https://anotherdamneddreamer.wordpress.com/">BLOG</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="http://a-real-magical-girl.tumblr.com/">TUMBLR</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            </p>
+        </div>
         <div id="contain">
             <div class="headThing">Rigged Dice</div>
             <content>
