--- a/Dice.html
+++ b/Dice.html
@@ -57,21 +57,18 @@
                 border:none;
             }
 
-            .boxy {
+            boxy {
                 width: 400px;
                 height: 400px;
-                border: 1px black;
+                background: white;
                 font-size: 34px;
                 margin: auto;
                 text-align: center;
-                display-block;
+                display: block;
             }
             #roll {
+                display: inline-block;
                 vertical-align: middle;
-            }
-            .inny {
-                margin: 0 auto;
-
             }
 
             #contain {
