--- a/Dice.html
+++ b/Dice.html
@@ -57,14 +57,14 @@
                 border:none;
             }
 
-            boxy {
+            #boxy {
                 width: 400px;
                 height: 400px;
                 background: white;
                 font-size: 34px;
                 margin: auto;
                 text-align: center;
-                display: block;
+                display:block;
             }
             #roll {
                 display: inline-block;
@@ -259,8 +259,8 @@
                 <i>Everything is Shit</i>! The tabletop roleplaying game where everything than can go wrong,
                 <i>will</i> go wrong™!
             </content>
-            <div class="boxy">
-                <span id="roll">0</span>
+            <div id="boxy">
+                <div id="roll">0</div>
             </div>
                 <button id="D4" onclick="rigged4()">Four-Sided</button>
                 <button id="D6" onclick="rigged6()">Six-Sided</button>
