--- a/Dice.html
+++ b/Dice.html
@@ -65,7 +65,8 @@
         background-color: rgba(217, 217, 217, .5);
         border: 1px, dashed,#5b5b5b;
         font-size: 34px;
-        margin: auto;
+        margin-left: auto;
+        margin-right: auto;
         text-align: center;
         display: block;
     }
