--- a/Dice.html
+++ b/Dice.html
@@ -266,11 +266,11 @@
             <div id="boxy">
                 <span id="roll">0</span>
             </div>
-                <button id="D4" onclick="rigged4()" onmousedown="flashA" onmouseup="flashB">Four-Sided</button>
-                <button id="D6" onclick="rigged6()" onmousedown="flashA" onmouseup="flashB">Six-Sided</button>
-                <button id="D8" onclick="rigged8()" onmousedown="flashA" onmouseup="flashB">Eight</button>
-                <button id="D10" onclick="rigged10()" onmousedown="flashA" onmouseup="flashB">Ten-Sided</button>
-                <button id="D12" onclick="rigged12()" onmousedown="flashA" onmouseup="flashB">Twelve</button>
-                <button id="D20" onclick="rigged20()" onmousedown="flashA" onmouseup="flashB">Twenty</button>
+                <button id="D4" onclick="rigged4()" onmousedown="flashA()" onmouseup="flashB()">Four-Sided</button>
+                <button id="D6" onclick="rigged6()" onmousedown="flashA()" onmouseup="flashB()">Six-Sided</button>
+                <button id="D8" onclick="rigged8()" onmousedown="flashA()" onmouseup="flashB()">Eight</button>
+                <button id="D10" onclick="rigged10()" onmousedown="flashA()" onmouseup="flashB()">Ten-Sided</button>
+                <button id="D12" onclick="rigged12()" onmousedown="flashA()" onmouseup="flashB()">Twelve</button>
+                <button id="D20" onclick="rigged20()" onmousedown="flashA()" onmouseup="flashB()">Twenty</button>
     </body>
 </html>
