repaired the deep fried dice file

--- a/Dice.html
+++ b/Dice.html
@@ -4,7 +4,6 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <style type="text/css">
     #D4 {
-<<<<<<< HEAD
         background-color:#EFD8D8;
         padding: 15px;
         font-size: 20px;
@@ -19,87 +18,50 @@
         padding: 15px;
         font-size: 20px;
         color: #6E6D6D;
-=======
-        background-color:#5b5b5b;
-        padding: 15px;
-        font-size: 20px;
-        color: #d8d8d8;
         border: none;
         margin-right: 15px;
-    }
-
-    #D6 {
-        background-color:#5b5b5b;
-        padding: 15px;
-        font-size: 20px;
-        color: #d8d8d8;
->>>>>>> 4ff9f00c8869460d7958b3154c9fec3bb4da8671
-        border: none;
-        margin-right: 15px;
+		margin-top: 15px;
     }
 
     #D8 {
-<<<<<<< HEAD
         background-color:#EFD8D8;
         padding: 15px;
         font-size: 20px;
         color: #6E6D6D;
-=======
-        background-color:#5b5b5b;
-        padding: 15px;
-        font-size: 20px;
-        color: #d8d8d8;
->>>>>>> 4ff9f00c8869460d7958b3154c9fec3bb4da8671
-        border:none;
+        border: none;
         margin-right: 15px;
+		margin-top: 15px;
     }
 
 
     #D10 {
-<<<<<<< HEAD
         background-color:#EFD8D8;
         padding: 15px;
         font-size: 20px;
         color: #6E6D6D;
-=======
-        background-color:#5b5b5b;
-        padding: 15px;
-        font-size: 20px;
-        color: #d8d8d8;
->>>>>>> 4ff9f00c8869460d7958b3154c9fec3bb4da8671
-        border:none;
+        border: none;
         margin-right: 15px;
+		margin-top: 15px;
     }
 
     #D12 {
-<<<<<<< HEAD
         background-color:#EFD8D8;
         padding: 15px;
         font-size: 20px;
         color: #6E6D6D;
-=======
-        background-color:#5b5b5b;
-        padding: 15px;
-        font-size: 20px;
-        color: #d8d8d8;
->>>>>>> 4ff9f00c8869460d7958b3154c9fec3bb4da8671
-        border:none;
+        border: none;
         margin-right: 15px;
+		margin-top: 15px;
     }
 
     #D20 {
-<<<<<<< HEAD
-        background-color:#EFD8D8;
+background-color:#EFD8D8;
         padding: 15px;
         font-size: 20px;
         color: #6E6D6D;
-=======
-        background-color:#5b5b5b;
-        padding: 15px;
-        font-size: 20px;
-        color: #d8d8d8;
->>>>>>> 4ff9f00c8869460d7958b3154c9fec3bb4da8671
-        border:none;
+        border: none;
+        margin-right: 15px;
+		margin-top: 15px;
     }
 
     #boxy {
@@ -108,18 +70,10 @@
         line-height: 100px;
         margin-top: 150px;
         margin-bottom: 150px;
-<<<<<<< HEAD
         background-color: rgba(239,216,216,1.00);
-        border: 1px, dashed,#5b5b5b;
         font-size: 34px;
         margin: 0 auto;
-=======
-        background-color: rgba(217, 217, 217, .5);
-        border: 1px, dashed,#5b5b5b;
         font-size: 34px;
-        margin-left: auto;
-        margin-right: auto;
->>>>>>> 4ff9f00c8869460d7958b3154c9fec3bb4da8671
         text-align: center;
         display: block;
     }
@@ -302,7 +256,6 @@
 
     </head>
     <body>
-<<<<<<< HEAD
         <div id="header_bar">
 		<p><a href="art.html">ABOUT</a> 
 		<a href="writing.html">WRITING</a> 
@@ -322,37 +275,13 @@
             <div id="boxy">
                 <span id="roll">0</span>
             </div>
-                <button id="D4" onclick="rigged4()">Four-Sided</button>
-                <button id="D6" onclick="rigged6()">Six-Sided</button>
-                <button id="D8" onclick="rigged8()">Eight</button>
-                <button id="D10" onclick="rigged10()">Ten-Sided</button>
-                <button id="D12" onclick="rigged12()">Twelve</button>
-                <button id="D20" onclick="rigged20()">Twenty</button>
-			   </div>    
-		</div>
-=======
-        <div id="topBar">
-            <p style="margin-right: 40px;">
-                <a href="fish-with-a-pencil.github.io">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="https://anotherdamneddreamer.wordpress.com/">BLOG</a>&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="http://a-real-magical-girl.tumblr.com/">TUMBLR</a>&nbsp;&nbsp;&nbsp;&nbsp;
-            </p>
-        </div>
-            <div class="headThing">Rigged Dice</div>
-            <content>
-                Welcome to
-                <i>Everything is Shit</i>! The tabletop roleplaying game where everything than can go wrong,
-                <i>will</i> go wrong™!
-            </content>
-            <div id="boxy">
-                <span id="roll">0</span>
-            </div>
                 <button id="D4" onclick="rigged4()" onmousedown="flashA()" onmouseup="flashB()">Four-Sided</button>
                 <button id="D6" onclick="rigged6()" onmousedown="flashA()" onmouseup="flashB()">Six-Sided</button>
                 <button id="D8" onclick="rigged8()" onmousedown="flashA()" onmouseup="flashB()">Eight</button>
                 <button id="D10" onclick="rigged10()" onmousedown="flashA()" onmouseup="flashB()">Ten-Sided</button>
                 <button id="D12" onclick="rigged12()" onmousedown="flashA()" onmouseup="flashB()">Twelve</button>
                 <button id="D20" onclick="rigged20()" onmousedown="flashA()" onmouseup="flashB()">Twenty</button>
->>>>>>> 4ff9f00c8869460d7958b3154c9fec3bb4da8671
+			   </div>    
+		</div>
     </body>
 </html>
